# personal-webpage

./: .env.example  .pre-commit-config.yaml  Dockerfile  GOOGLE_OAUTH_SETUP.md  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  tasks.py
.github/workflows/: ci.yml
admin_dashboard/: context_processors.py  urls.py  views.py
apps/core/: tasks.py
blog/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
mysite/: __init__.py  settings.py  settings_old.py  test_integration.py  test_views.py  urls.py  views.py
mysite/settings/: base.py  dev.py  prod.py
portfolio/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
portfolio/migrations/: 0001_add_mysite_project.py  0001_initial.py  0002_add_mysite_project.py  0003_project_slug.py  0004_project_github_link.py
static/: site.css
status/: admin.py  models.py  tests.py  urls.py  views.py
status/management/commands/: backup_db.py
status/migrations/: 0001_initial.py
templates/: about.html  base.html  contact.html  home.html  projects.html
templates/admin_dashboard/: access_denied.html  dashboard.html
templates/blog/: _posts.html  detail.html  index.html
templates/projects/: detail.html
